syntax = "proto3";

enum MemberSlot {
  NONE = 0;
  FIELD_1 = 1;
  FIELD_2 = 2;
  FIELD_3 = 3;
  SUB_1 = 4;
  SUB_2 = 5;
  SUB_3 = 6;
}

message ProtoMysticCode {
  uint32 mysticCodeId = 1;
  uint32 mysticCodeLevel = 2;
}

message ProtoTeamSlot {
  uint32 servantId = 1;
  uint32 servantLevel = 2;
  uint32 fou = 3;
  uint32 noblePhantasmLevel = 4;
  uint32 skill1 = 5;
  uint32 skill2 = 6;
  uint32 skill3 = 7;
  uint32 append1 = 8;
  uint32 append2 = 9;
  uint32 append3 = 10;
  uint32 craftEssenceId = 11;
  uint32 craftEssenceLevel = 12;
  bool craftEssenceMLB = 13;
}

enum CommandType {
  NO_COMMAND = 0;
  SKILL_1 = 1;
  SKILL_2 = 2;
  SKILL_3 = 3;
}

message ProtoCommand {
  CommandType type = 1;
  MemberSlot source = 2;
  MemberSlot target = 3;
}

enum BattleCommandType {
  SKIP = 0;
  COMMAND_CARD = 1;
  NOBLE_PHANTASM = 2;
  INCAPACITATE = 3;
}

message ProtoBattleCommand {
  BattleCommandType type = 1;
  MemberSlot source = 2;
}

message ProtoBattleStep {
  repeated ProtoCommand commands = 1;
  repeated ProtoBattleCommand battleCommands = 2;
}

message ProtoTeam {
  ProtoMysticCode mysticCode = 1;
  repeated ProtoTeamSlot slots = 2;
  repeated ProtoBattleStep commandScript = 3;
}

message ProtoTrismegistusState {
  repeated ProtoTeam teams = 1;
}
